fix: Modern best practices – usage of Map.of() instead of Collections.EmptyMap() for empty collections